--- a/_locales/zh-CN/smarthon-iotbit-strings.json
+++ b/_locales/zh-CN/smarthon-iotbit-strings.json
@@ -3,88 +3,88 @@
   "WiFiIoT.CityList.Bangkok|block": "曼谷 (UTC+7)",
   "WiFiIoT.CityList.Beijing|block": "北京 (UTC+8)",
   "WiFiIoT.CityList.Chicago|block": "芝加哥  (UTC-6)",
-  "WiFiIoT.CityList.City_of_Brussels|block": "布魯塞爾  (UTC+1)",
+  "WiFiIoT.CityList.City_of_Brussels|block": "布鲁塞尔  (UTC+1)",
   "WiFiIoT.CityList.Dubai|block": "杜拜 (UTC+4)",
-  "WiFiIoT.CityList.Frankfurt|block": "法蘭克福 (UTC+1)",
+  "WiFiIoT.CityList.Frankfurt|block": "法兰克福 (UTC+1)",
   "WiFiIoT.CityList.HongKong|block": "香港 (UTC+8)",
-  "WiFiIoT.CityList.Jakarta|block": "雅加達  (UTC+7)",
-  "WiFiIoT.CityList.Johannesburg|block": "約翰內斯堡 (UTC+2)",
+  "WiFiIoT.CityList.Jakarta|block": "雅加达  (UTC+7)",
+  "WiFiIoT.CityList.Johannesburg|block": "约翰内斯堡 (UTC+2)",
   "WiFiIoT.CityList.Kuala_Lumpur|block": "吉隆坡  (UTC+8)",
-  "WiFiIoT.CityList.London|block": "倫敦 (UTC+0)",
-  "WiFiIoT.CityList.Los_Angeles|block": "洛杉磯 (UTC-8)",
-  "WiFiIoT.CityList.Madrid|block": "馬德里 (UTC+1)",
+  "WiFiIoT.CityList.London|block": "伦敦 (UTC+0)",
+  "WiFiIoT.CityList.Los_Angeles|block": "洛杉矶 (UTC-8)",
+  "WiFiIoT.CityList.Madrid|block": "马德里 (UTC+1)",
   "WiFiIoT.CityList.Mexico_City|block": "墨西哥城 (UTC-6)",
-  "WiFiIoT.CityList.Milano|block": "米蘭 (UTC+1)",
+  "WiFiIoT.CityList.Milano|block": "米兰 (UTC+1)",
   "WiFiIoT.CityList.Moscow|block": "莫斯科 (UTC+3)",
-  "WiFiIoT.CityList.Mumbai|block": "孟買 (UTC+5:30)",
+  "WiFiIoT.CityList.Mumbai|block": "孟买 (UTC+5:30)",
   "WiFiIoT.CityList.Paris|block": "巴黎 (UTC+1)",
-  "WiFiIoT.CityList.Sao_Paulo|block": "聖保羅 (UTC-3)",
-  "WiFiIoT.CityList.Seoul|block": "首爾 (UTC+9)",
+  "WiFiIoT.CityList.Sao_Paulo|block": "圣保罗 (UTC-3)",
+  "WiFiIoT.CityList.Seoul|block": "首尔 (UTC+9)",
   "WiFiIoT.CityList.Shanghai|block": "上海 (UTC+8)",
   "WiFiIoT.CityList.Singapore|block": "新加坡 (UTC+8)",
   "WiFiIoT.CityList.Sydney|block": "雪梨 (UTC+10)",
   "WiFiIoT.CityList.Taipei|block": "台北市 (UTC+8)",
-  "WiFiIoT.CityList.Tokyo|block": "東京 (UTC+9)",
-  "WiFiIoT.CityList.Toronto|block": "多倫多 (UTC-5)",
-  "WiFiIoT.CityList.Warsaw|block": "華沙 (UTC+1)",
-  "WiFiIoT.ESP_360_SERVO_DIR.anticlockwise|block": "逆時針",
-  "WiFiIoT.ESP_360_SERVO_DIR.clockwise|block": "順時針",
+  "WiFiIoT.CityList.Tokyo|block": "东京 (UTC+9)",
+  "WiFiIoT.CityList.Toronto|block": "多伦多 (UTC-5)",
+  "WiFiIoT.CityList.Warsaw|block": "华沙 (UTC+1)",
+  "WiFiIoT.ESP_360_SERVO_DIR.anticlockwise|block": "逆时针",
+  "WiFiIoT.ESP_360_SERVO_DIR.clockwise|block": "顺时针",
   "WiFiIoT.ESP_SERVO_PORT.S1|block": "S1",
   "WiFiIoT.ESP_SERVO_PORT.S2|block": "S2",
   "WiFiIoT.ESP_SERVO_PORT.S3|block": "S3",
-  "WiFiIoT.ESP_Servo_180|block": "ESP旋轉 180° 舵機|舵機1角度 %deg1 ° ||舵機2角度 %deg2 ° |舵機3角度 %deg3 °|",
-  "WiFiIoT.ESP_Servo_360|block": "ESP旋轉 360° 舵機|舵機1方向 %dir1 速度 %speed1||舵機2方向 %dir2 速度 %speed2|舵機3方向 %dir3 速度 %speed3|",
-  "WiFiIoT.getDeviceID|block": "裝置ID",
-  "WiFiIoT.getGenericHttpReturn|block": "HTTP回應(string array)",
-  "WiFiIoT.getNTP_number|block": "從時區取得NTP網絡時間%zone",
-  "WiFiIoT.getNTP|block": "從城市取得NTP網絡時間%city",
+  "WiFiIoT.ESP_Servo_180|block": "ESP旋转 180° 舵机|舵机1角度 %deg1 ° ||舵机2角度 %deg2 ° |舵机3角度 %deg3 °|",
+  "WiFiIoT.ESP_Servo_360|block": "ESP旋转 360° 舵机|舵机1方向 %dir1 速度 %speed1||舵机2方向 %dir2 速度 %speed2|舵机3方向 %dir3 速度 %speed3|",
+  "WiFiIoT.getDeviceID|block": "装置ID",
+  "WiFiIoT.getGenericHttpReturn|block": "HTTP回应(string array)",
+  "WiFiIoT.getNTP_number|block": "从时区取得NTP网络时间%zone",
+  "WiFiIoT.getNTP|block": "从城市取得NTP网络时间%city",
   "WiFiIoT.httpMethod.DELETE|block": "DELETE",
   "WiFiIoT.httpMethod.GET|block": "GET",
   "WiFiIoT.httpMethod.POST|block": "POST",
   "WiFiIoT.httpMethod.PUT|block": "PUT",
   "WiFiIoT.initializeWifi|block": "初始化IoT:bit TX %tx_pin RX %rx_pin",
-  "WiFiIoT.is_wifi_connect|block": "WiFi連接狀態",
+  "WiFiIoT.is_wifi_connect|block": "WiFi连接状态",
   "WiFiIoT.mode.App|block": "APP",
   "WiFiIoT.mode.Web|block": "WEB",
   "WiFiIoT.mode.all|block": "ALL",
   "WiFiIoT.mode.ifttt|block": "IFTTT",
-  "WiFiIoT.on_IFTTT_conn|block": "當上傳到IFTTT後",
-  "WiFiIoT.on_NTP_Received|block": "當取得NTP網絡時間",
-  "WiFiIoT.on_WAN_Control_Connected|block": "當連接到互聯網指令伺服器",
-  "WiFiIoT.on_WAN_remote_value|block": "當從互聯網接收到指令及數值",
-  "WiFiIoT.on_WAN_remote|block": "當從互聯網接收到指令",
-  "WiFiIoT.on_thingspeak_conn|block": "當上傳到Thingspeak後",
-  "WiFiIoT.on_wifi_connect|block": "當WiFi連接後",
-  "WiFiIoT.on_wifi_create_channel|block": "當加入頻道時",
-  "WiFiIoT.on_wifi_disconnect|block": "當WiFi斷線",
-  "WiFiIoT.on_wifi_received_value|block": "當從頻道收到訊息及數值",
-  "WiFiIoT.on_wifi_received|block": "當從頻道收到訊息",
-  "WiFiIoT.on_wifi_sender_sent|block": "當訊息發送到頻道",
-  "WiFiIoT.sendAT|block": "發送AT指令 %command",
-  "WiFiIoT.sendGenericHttp|block": "發送HTTP請求 %method| http://%url| header %header| body %body",
-  "WiFiIoT.sendIFTTT|block": "發送到 IFTTT key* %key|事件名稱* %event||數值1 %value1|數值2 %value2|數值3 %value3",
-  "WiFiIoT.sendThingspeak|block": "發送到 Thingspeak Key* %key|項目1數值 %field1||項目2數值 %field2|項目3數值 %field3|項目4數值 %field4|項目5數值 %field5|項目6數值 %field6|項目7數值 %field7|項目8數值 %field8",
-  "WiFiIoT.sendVersion|block": "韌體版本",
-  "WiFiIoT.setWifi|block": "連接到WiFi 名稱 %ssid| 密碼 %pwd",
+  "WiFiIoT.on_IFTTT_conn|block": "当上传到IFTTT後",
+  "WiFiIoT.on_NTP_Received|block": "当取得NTP网络时间",
+  "WiFiIoT.on_WAN_Control_Connected|block": "当连接到互联网指令伺服器",
+  "WiFiIoT.on_WAN_remote_value|block": "当从互联网接收到指令及数值",
+  "WiFiIoT.on_WAN_remote|block": "当从互联网接收到指令",
+  "WiFiIoT.on_thingspeak_conn|block": "当上传到Thingspeak後",
+  "WiFiIoT.on_wifi_connect|block": "当WiFi连接後",
+  "WiFiIoT.on_wifi_create_channel|block": "当加入频道时",
+  "WiFiIoT.on_wifi_disconnect|block": "当WiFi断线",
+  "WiFiIoT.on_wifi_received_value|block": "当从频道收到讯息及数值",
+  "WiFiIoT.on_wifi_received|block": "当从频道收到讯息",
+  "WiFiIoT.on_wifi_sender_sent|block": "当讯息发送到频道",
+  "WiFiIoT.sendAT|block": "发送AT指令 %command",
+  "WiFiIoT.sendGenericHttp|block": "发送HTTP请求 %method| http://%url| header %header| body %body",
+  "WiFiIoT.sendIFTTT|block": "发送到 IFTTT key* %key|事件名称* %event||数值1 %value1|数值2 %value2|数值3 %value3",
+  "WiFiIoT.sendThingspeak|block": "发送到 Thingspeak Key* %key|项目1数值 %field1||项目2数值 %field2|项目3数值 %field3|项目4数值 %field4|项目5数值 %field5|项目6数值 %field6|项目7数值 %field7|项目8数值 %field8",
+  "WiFiIoT.sendVersion|block": "韧体版本",
+  "WiFiIoT.setWifi|block": "连接到WiFi 名称 %ssid| 密码 %pwd",
   "WiFiIoT.startWebServer_WAN|block": "Start WiFi remote control (WAN)",
-  "WiFiIoT.wifi_listen_channel|block": "加入到頻道 %channel",
-  "WiFiIoT.wifi_send_message_value|block": "傳送到頻道 %channel ,訊息為 %message ,數值為 %value",
-  "WiFiIoT.wifi_send_message|block": "傳送到頻道 %channel ,訊息為 %message",
+  "WiFiIoT.wifi_listen_channel|block": "加入到频道 %channel",
+  "WiFiIoT.wifi_send_message_value|block": "传送到频道 %channel ,讯息为 %message ,数值为 %value",
+  "WiFiIoT.wifi_send_message|block": "传送到频道 %channel ,讯息为 %message",
   "WiFiIoT|block": "IoT:bit",
   "{id:category}WiFiIoT": "WiFiIoT",
-  "{id:group}Advanced": "進階檢查",
-  "{id:group}Configuration": "系統",
-  "{id:group}Current Time": "NTP網絡時間",
+  "{id:group}Advanced": "进阶检查",
+  "{id:group}Configuration": "系统",
+  "{id:group}Current Time": "NTP网络时间",
   "{id:group}Get controlled": "接收指令",
   "{id:group}HTTP": "HTTP",
   "{id:group}IFTTT": "IFTTT",
   "{id:group}Receiver": "接收",
-  "{id:group}Sender": "發送",
-  "{id:group}Servo": "舵機",
+  "{id:group}Sender": "发送",
+  "{id:group}Servo": "舵机",
   "{id:group}Start the control": "Start the control",
   "{id:group}Thingspeak": "Thingspeak",
-  "{id:subcategory}Channel": "頻道控制",
-  "{id:subcategory}Control": "互聯網控制",
+  "{id:subcategory}Channel": "频道控制",
+  "{id:subcategory}Control": "互联网控制",
   "{id:subcategory}ESP": "ESP",
-  "{id:subcategory}IoT Services": "IoT服務"
+  "{id:subcategory}IoT Services": "IoT服务"
 }
